<resources>
    <string name="app_name">LSApp</string>
    <string name="notifyTitle">Reminder</string>
    <string name="notifyMsg">The current application is missing the necessary permissions. Please click "Settings" to open the required permissions.</string>
    <string name="cancel">Cancel</string>
    <string name="Setting">Settings</string>
    <string name="exit">Please press again to exit</string>
    <string name="AllTask">All tasks</string>
    <string name="download">Download</string>
    <string name="download_complete">Install</string>
    <string name="DownloadError">Error</string>
    <string name="DownloadWaiting">Wait</string>
    <string name="DownloadResume">Continue</string>
    <string name="DownloadPause">Pause</string>
    <string name="Download">Download</string>
    <string name="LaisonApps">Laison apps</string>
    <string name="DownloadCompletes">Complete</string>
    <string name="DownloadStop">Stop</string>
    <string name="download_pause">Continue</string>
    <string name="ReDownload">Re-Download</string>
    <string name="DeleteOne">Delete task</string>
    <string name="DeleteAll">Delete all</string>
    <string name="PleaseWailt">Please wait to load resources</string>
    <string name="tab_search_name">Search</string>
    <string name="GetAppInfoError">Failure to get App information</string>
    <string name="resetDefaultServerAddress">Restore address</string>
    <string name="CurrentAddressIsError">Error server address</string>
    <string name="InputAddressError">Input server address error!</string>
    <string name="ServerChanged">Server address changed</string>
    <string name="NoDownloadRecords">There is currently no download task</string>
    <string name="download_waiting">Wait</string>
    <string name="YouCanOnlyDownloadThree">You can download up to three tasks at the same time, please wait …</string>
    <string name="GetDataFormatError">Data format error</string>
    <string name="Sign">An innovative company</string>
    <string name="Laison">LAISON</string>
    <string name="Queue">In the queue</string>
    <string name="Open">Open</string>
    <string name="Update">Update</string>
    <string name="Net_warn">Network is poor, please check the network settings</string>
    <string name="SetServiceAddress">Set server address</string>
    <string name="tab_apps_name">App</string>

    <string name="PullToRefresh">Pull down to refresh</string>
    <string name="Loading">Loading…</string>
    <string name="Refresh">Refresh</string>
    <string name="PullOnLoading">Pull up to load</string>
    <string name="LoadMore">Refresh to load more</string>
    <string name="DownloadInstall">Install</string>
    <string name="CurrentNoData">No data</string>
    <string name="SendAdiceSuccess">Send successfully.\nThank you for your advice.</string>
    <string name="CompanyWebsite">Company official website</string>
    <string name="Email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="CompanyProfile">Company profile</string>
    <string name="CompanyEmail">sales@laisontech.com</string>
    <string name="CompanyTelphone">+86–571–89715425</string>
    <string name="WecomeToLaison">Welcome to LAISON!</string>
    <string name="Vision">Enable people around the world enjoy the clean water through Improving the efficiency of water resource usage.</string>
    <string name="BackgroundForLaison">BACKGROUND OF LAISON:</string>
    <string name="LaisonContent">Hangzhou LAISON technology Co. Ltd. , base in Zhejiang University National Science Park, is an innovation oriented high-tech company established in 2012 with an well educated key member team specialized in R and D and marketing, including PhD in telecommunication, MBA, Master of Marketing and Master of Engineering etc..</string>
    <string name="CompanyAddress">No.525 Xixi Road, Hangzhou, 310007, China</string>
    <string name="EmailChoose">Email Apps</string>
    <string name="official_websiteURL">http://www.laisongroup.com/</string>
    <string name="CompanyWebsites">Laison web</string>
    <string name="UpdateIntro">Updates</string>
    <string name="AppIntroInfo">Introduction</string>
    <string name="save">Save</string>
    <string name="CurrentServerAddress">Current server address:</string>
    <string name="AboutUs">About us</string>
    <string name="App">App</string>
    <string name="Feedback">Feedback</string>
    <string name="SendAdvice">Submit</string>
    <string name="tab_manager_name">Management</string>
    <string name="tab_settings_name">Settings</string>

    <string name="DownloadTask">Installing</string>
    <string name="LocalManager">Installed</string>
    <string name="AlreayPause">Paused</string>
    <string name="CheckAppUpdate">Check for updates</string>
    <string name="Search">Search</string>
    <string name="SearchRecord">Search history</string>

    <string name="InputSearchInfo">App Name/Company Name</string>
    <string name="UpdateInfo">Upgrade Description:</string>
    <string name="ConnectError">Failed to Download</string>
    <string name="AppIsDownloading">App is under upgrading, please do not download again！</string>
    <string name="UpdateIntroduce">Update description:</string>
    <string name="GetAllAppInfo">Get info. of all APPs</string>
    <string name="EmailError">Failed to send via Email</string>
    <string name="getUpLoadDataFailed">Failed to get the update info. </string>
    <string name="LastVersion">Current version is already the newest one</string>
    <string name="GetNewVersionApp">New Version to be upgraded</string>
    <string name="DownloadNewVersion">Upgrading</string>
    <string name="NextTime">Next Time</string>
    <string name="CurrentNewVersion">Current Version is already the newest one！</string>
    <string name="Downloading">Downloading....</string>
    <string name="AboutCompany">About</string>
    <string name="network_error">Invalid Internet</string>
    <string name="YouAllBill">All Data</string>
    <string name="NotEmpty">Please input Key Words to query</string>
    <string name="InputQueryCode">Please input Key Words</string>
    <string name="GetDataError">No Record available</string>
    <string name="AppDetail">App Description</string>
    <string name="SearchResult">Search Result</string>
    <string name="NoSearchAPP">No Related Info.</string>
    <string name="UpdateVersion">Updated version:</string>
    <string name="NeedInstallPerssion">The software requires installation permissions.</string>
    <string name="NoConnectNet">Network unconnected</string>
    <string name="SignSplash">An innovative company</string>
    <string name="title_apps">App</string>
    <string name="title_manager">Management</string>
    <string name="title_settings">Settings</string>
    <string name="transition_name" translatable="false">square_transition</string>
    <string name="MB">MB</string>
    <string name="Free">Free</string>
    <string name="ErrorParams">ErrorParams</string>
    <string name="Operate">Operate</string>
    <string name="update_updatetitle">New Version available</string>
    <string name="update_notnow">Not now</string>
    <string name="backgroundDownload">Back-end Downloading</string>
    <string name="PleaseOpenWritePermission">Please open read and write permissions</string>
    <string name="Version">Version：</string>
    <string name="Size">Size：</string>
    <string name="ReleaseDate">Release date：</string>
    <string name="Updates">Updates</string>
    <string name="FileHadDelete">The source file has been deleted. Please download it again.</string>
    <string name="Company">Company：</string>
</resources>
