<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.laisontech.laisondownloader.ui.activity.common.CompanyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/WecomeToLaison"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Vision"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/BackgroundForLaison"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/LaisonContent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/CompanyAddress"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_link"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/link" />

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
