<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:background="@drawable/shape_delete"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/Operate"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:layout_marginEnd="@dimen/dp_7"
        android:layout_marginStart="@dimen/dp_7"
        android:background="#50323232" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_delete"
        style="@style/CardViewSimpleStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/DeleteOne"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_reload"
        style="@style/CardViewSimpleStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ReDownload"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:layout_marginTop="@dimen/dp_15" />

</LinearLayout>


