<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/dp10"
        android:id="@+id/setServiceUrl"
        style="@style/CardViewStyle2">

        <com.laisontech.laisondownloader.customeview.TouchLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerText="@string/SetServiceAddress"
            app:leftIcon="@drawable/icon_server" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/feedBack"
        style="@style/CardViewStyle2">

        <com.laisontech.laisondownloader.customeview.TouchLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerText="@string/Feedback"
            app:leftIcon="@drawable/icon_faceback" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/checkUpdate"
        style="@style/CardViewStyle2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_23"
                android:layout_height="@dimen/dp_23"
                android:layout_marginStart="@dimen/dp_15"
                android:scaleType="centerCrop"
                android:src="@drawable/checkupdate_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:singleLine="true"
                android:text="@string/CheckAppUpdate"
                android:textColor="#323232"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_VersionName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end|center"
                    android:textColor="@color/etHintColor"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/iv_need_update"
                    android:layout_width="@dimen/dp_9"
                    android:layout_height="@dimen/dp_9"
                    android:layout_marginEnd="@dimen/dp_3"
                    android:layout_marginStart="@dimen/dp_3"
                    android:layout_marginTop="@dimen/dp_8"
                    android:src="@drawable/icon_read_ball"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginEnd="@dimen/dp_15"
                android:src="@drawable/enter" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/aboutUs"
        style="@style/CardViewStyle2">

        <com.laisontech.laisondownloader.customeview.TouchLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerText="@string/AboutUs"
            app:leftIcon="@drawable/aboutus_icon" />
    </android.support.v7.widget.CardView>


</LinearLayout>